# BMV080-Examples-for-nRF5340

./: .gitignore  CMakeLists.txt  README.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  sample.yaml
boards/arm/yaptic/: Kconfig  Kconfig.defconfig  Kconfig.yaptic  board.yml  yaptic_cpuapp_common-pinctrl.dtsi  yaptic_cpuapp_common.dtsi  yaptic_cpuapp_partition_conf.dtsi  yaptic_nrf5340_cpuapp.dts  yaptic_nrf5340_cpuapp.yaml  yaptic_nrf5340_cpunet-pinctrl.dtsi  yaptic_nrf5340_cpunet.dts
lib/: i2c.c  i2c_header.h
lib/arm_cortex_m33f/: README.md
src/: main.c
